# ai-sdd-workflow

./: .gitignore  .sdd-config.schema.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLUGIN.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: claude-code-best-practices-reviewer.md  claude-code-features-reviewer.md  claude-code-plugin-developer.md  plugin-agent-reviewer.md
.claude/commands/: review-plugin-agent.md
.github/: PULL_REQUEST_TEMPLATE.md
agents/: sdd-workflow.md
commands/: check_spec.md  generate_prd.md  generate_spec.md  review_cleanup.md  task_breakdown.md
hooks/: check-commit-prefix.sh  check-spec-exists.sh  settings.example.json
plugins/sdd-workflow/cli/: README.md  pyproject.toml
plugins/sdd-workflow/cli/src/sdd_cli/: __init__.py  __main__.py
plugins/sdd-workflow/cli/src/sdd_cli/commands/: cache.py  index.py  search.py  visualize.py
plugins/sdd-workflow/cli/src/sdd_cli/indexer/: __init__.py  db.py  parser.py  scanner.py
plugins/sdd-workflow/cli/src/sdd_cli/visualizer/: __init__.py  analyzer.py  mermaid.py  server.py
plugins/sdd-workflow/cli/src/sdd_cli/visualizer/static/: index.html
plugins/sdd-workflow/cli/src/sdd_cli/visualizer/static/css/: style.css
plugins/sdd-workflow/cli/src/sdd_cli/visualizer/static/js/: app.js
plugins/sdd-workflow/cli/src/sdd_cli/visualizer/templates/: graph.html
scripts/: README.md  collect-metrics.py  plugin-lint.sh  test-plugin-structure.sh  test-security.sh  test-session-start.sh
skills/: vibe-detector.md
tests/: test_security_session_start.py
(+314 files in other folders)
